Fix remaining footer link styles in dark mode media query

--- a/docs/css/common.css
+++ b/docs/css/common.css
@@ -593,7 +593,14 @@ body:not(.light-mode) .external-link:visited {
     }
 
     body:not(.light-mode) .footer a {
-        color: #b0b0b0;
+        color: inherit;
+        text-decoration: underline;
+        text-decoration-color: rgba(255, 255, 255, 0.4);
+        text-underline-offset: 2px;
+    }
+
+    body:not(.light-mode) .footer a:hover {
+        text-decoration-color: rgba(255, 255, 255, 0.6);
     }
 }
 
